deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tertullien-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tertullien-api
  template:
    metadata:
      labels:
        app: tertullien-api
    spec:
      containers:
      - name: tertullien-container
        image: antoineklein/tertullien:latest
        ports:
        - containerPort: 9555
        volumeMounts:
        - name: scripts-volume
          mountPath: /usr/src/app/scripts
        - name: data-volume
          mountPath: /usr/src/app/data
        - name: plot-volume
          mountPath: /usr/src/app/plot
      volumes:
      - name: scripts-volume
        emptyDir: {}
      - name: data-volume
        emptyDir: {}
      - name: plot-volume
        emptyDir: {}
