deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tertullien-service
spec:
  selector:
    app: tertullien-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9555
  type: ClusterIP  # Or ClusterIP/NodePort depending on Onyxia setup
